--- a/package.json
+++ b/package.json
@@ -15,13 +15,16 @@
     "@types/react-dom": "^16.9.10",
     "@types/react-router": "^5.1.11",
     "@types/react-router-dom": "^5.1.7",
+    "@types/react-select": "^4.0.13",
     "ionicons": "^5.4.0",
     "react": "^17.0.1",
     "react-animated-css": "^1.2.1",
     "react-dom": "^17.0.1",
+    "react-dropdown": "^1.9.2",
     "react-router": "^5.2.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.2",
+    "react-select": "^4.3.0",
     "react-tinder-card": "^1.3.1",
     "typescript": "^4.1.3",
     "web-vitals": "^0.2.4",
