--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "react-scripts": "4.0.2",
     "react-select": "^4.3.0",
     "react-tinder-card": "^1.3.1",
+    "socket.io-client": "^4.1.1",
     "typescript": "^4.1.3",
     "web-vitals": "^0.2.4",
     "workbox-background-sync": "^5.1.4",
