--- a/server/package.json
+++ b/server/package.json
@@ -15,6 +15,7 @@
     "moviedb": "^0.2.10",
     "mysql": "^2.18.1",
     "node-themoviedb": "^0.2.7",
-    "redis": "^3.0.2"
+    "redis": "^3.0.2",
+    "socket.io": "^4.1.1"
   }
 }
